fixed text being squished

--- a/static/style.css
+++ b/static/style.css
@@ -7,3 +7,6 @@
     font-family: 'Pixelify Sans', sans-serif;
 }
 
+#text-box {
+    padding: 5px;
+}
